# 2023-kmk

./: docker-compose.yml
.github/workflows/: pipeline_dev.yml  pipeline_prod.yml  pipeline_pull_request.yml  pipeline_push.yml
firebase-emulators/: Dockerfile  firebase.json  firestore.indexes.json  mock_firestore.py
pid-be/: .dockerignore  Dockerfile  firebase.json  pyproject.toml
pid-be/app/: config.py  main.py
pid-be/app/models/entities/: Appointment.py  Medication.py  Physician.py  Prescription.py  Reminder.py  Score.py
pid-be/app/models/responses/: MedsResponses.py
pid-be/app/routers/: admin.py  appointments.py  medications.py  physicians.py  prescriptions.py  reminders.py  users.py
pid-be/app/scheduler/: scheduler.py
pid-be/credentials/: client.json
pid-notifications-api/: .dockerignore  Dockerfile  pyproject.toml
pid-notifications-api/app/: main.py
pid-notifications-api/app/models/email_templates/: MedicationReminder.html  PrescriptionCreated.html
pid-notifications-api/app/models/entities/: EmailHandler.py  TemplateHandler.py
pid-ui/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json
pid-ui/src/app/: globals.css  layout.js  page.js
pid-ui/src/app/components/: ConfirmationModal.js  header.js  userCheck.js
pid-ui/src/app/dashboard-admin/: page.js
pid-ui/src/app/landing/: page.js
pid-ui/src/app/medical-records/: page.js
pid-ui/src/app/patient/: page.js
pid-ui/src/app/patient-dashboard/: page.js
pid-ui/src/app/patient-my-record/: page.js
pid-ui/src/app/physician/: page.js  physicianContext.js  utils.js
(+20 files in other folders)
